--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -23,7 +23,7 @@
   ],
   "browser_action": {
     "default_icon": {
-      "48": "icons/border-48.png"
+      "48": "icons/logo.png"
     },
     "default_popup": "popup.html",
     "default_title": "ChessReader - Click to interact on chess.com"
